<resources>
    <string name="app_name">CaviQuest</string>
    <string name="registration">Регистрация</string>
    <string name="quests">Квесты</string>
    <string name="workspaces">Группы</string>
    <string name="achievements">Достижения</string>
    <string name="achievement">Достижение</string>
    <string name="description">Описание:</string>
    <string name="status">Статус:</string>
    <string name="name">Название:</string>
    <string name="priority">Приоритет</string>
    <string name="deadline">Время окончания</string>
    <string name="add">Добавить</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="tasks">Задачи</string>
    <string name="categories">Категории</string>
    <string name="today">Сегодня</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="welcome">Добро Пожаловать в CaviQuest!</string>
    <string name="questList">Список квестов</string>
    <string name="add_workspace">Добавить проект</string>
    <string name="newQuest">Новый Квест!</string>
    <string name="newWorkspace">Новая Группа!</string>
    <string name="groupName">Название группы</string>
    <string name="questGraph">Иерархия квестов</string>
</resources>
