<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.zuma.ikrafinal.AddQuestActivity">

    <EditText
        android:id="@+id/et_quest_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_quest_description"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_quest_priority"
        android:hint="@string/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/et_quest_deadline"
        android:hint="@string/deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_quest_save"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
